@@ -17,7 +17,7 @@ use Carp;
 use Data::Dumper qw/Dumper/;
 use Date::Calc qw/Localtime Mktime Monday_of_Week Week_of_Year Today Normalize_DHMS/;
 use File::Slurp qw/read_file/;
-use Encode qw/encode encode_utf8 decode/;
+use Encode qw/encode encode_utf8 decode is_utf8/;
 use File::Copy qw/move/;
 use File::Temp qw/tempfile/;
 use Time::HiRes qw/gettimeofday tv_interval/;
@@ -1886,11 +1886,28 @@ read and decode string from either utf-8 or iso-8859-1
 =cut
 sub decode_any {
     eval { $_[0] = decode( "utf8", $_[0], Encode::FB_CROAK ) };
-    if ( $@ ) { # input was not utf8
+    if($@) { # input was not utf8
+        return($_[0]) if $@ =~ m/\QCannot decode string with wide characters\E/mxo; # since Encode.pm 2.53 decode_utf8 no longer noops when utf8 is already on
         $_[0] = decode( "iso-8859-1", $_[0], Encode::FB_WARN );
     }
     return $_[0];
 }
+
+########################################
+
+=head2 ensure_utf8
+
+    ensure_utf8($str)
+
+makes sure the given string is utf8
+
+=cut
+sub ensure_utf8 {
+    $_[0] = decode_any($_[0]);
+    return($_[0]) if is_utf8($_[0]); # since Encode.pm 2.53 decode_utf8 no longer noops when utf8 is already on
+    return(encode_utf8($_[0]));
+}
+
 
 ########################################
 
