@@ -12,6 +12,7 @@ next:
             - fixed half-visible panorama buttons in IE11
             - fixed panorama shape rotation in IE11
             - fixed panorama column error in minemap
+            - fixed problem with utf8 characters in passwords
 
 1.84-3   Sat May 31 16:10:07 CEST 2014
           - added csrf_allowed_hosts configuration option
